--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,12 @@
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
 }
+
+.bars
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f0f0f0
+}
