--- a/src/components/TravelLog/travel.css
+++ b/src/components/TravelLog/travel.css
@@ -35,10 +35,27 @@
     padding: 20px;
 }
 
-.travelform form input[type="file" i] {
-    appearance: block;
-    height: 60px;
-    text-align: center;
+.travelform form .imgBar
+{
+    display: inline-flex;
+    width: 350px;
+    max-width: 280px;
+    height: 200px;
+    border-radius: 20px;
+    gap: 4px;
+    justify-content: center;
+    align-items: flex-start;
+    line-height: 50px;
+    background-image: url(../../assets/upload.png);
+    background-size: cover;
+    cursor: pointer;
+}
+
+.travelform form .imgBar span
+{
+    color: rgb(109, 166, 185);
+    font-style: italic;
+    cursor: pointer;
 }
 
 .travelform form button {
@@ -116,6 +133,23 @@
     {
         flex-direction: row;
         margin-bottom: 2px;
+    }
+
+    /* Travel Stats */
+
+    .log .memolink
+    {
+        box-shadow: none;
+        background-color: transparent;
+        border-bottom: 1px solid #333;
+    }
+
+    .log .memolink h2
+    {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        max-width: 280px;
     }
 
 }
