--- a/src/pages/Auth/SignUp.css
+++ b/src/pages/Auth/SignUp.css
@@ -56,6 +56,10 @@ form{
 }
 
 @media  screen and (max-width: 576px) {
+    .signup h1
+    {
+        font-size: 1.4rem;
+    }
     form{
         width: 90%;
     }
